@@ -2,7 +2,8 @@
 
 ## Version  3.1.0
 
-* Adding support for video title, aka handler_name tag
+* Adding support for movie title
+* Changing no longer need to restart for setting page changes
 * Fixing output name is not regenerated on encoder switch if matching extension
 
 ## Version  3.0.1
